--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,6 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
   font-synthesis: none;
@@ -28,11 +26,13 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #242424;
 }
 h1 {
   font-size: 2.6em;
   line-height: 1.1;
   margin: 0 0 30px 0;
+  color: rgba(255, 255, 255, 0.87);
 }
 button {
   border-radius: 8px;
@@ -44,15 +44,17 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
   transition: filter 300ms ease-in;
+  color: white;
 }
 input{
-  border: 1px solid transparent;
+  border: 1px solid #fc4b08;
   background-color: #1a1a1a;
   border-radius: 8px;
   font-size: 1em;
   padding: 0.6em 1.2em;
   font-weight: 500;
   margin-right: 10px;
+  color: white;
 }
 button:hover {
   filter: drop-shadow(0 0 2em #ffa264aa);
