--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ button {
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
-  background-color: #242424;
+  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
   transition: filter 300ms ease-in;
