--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,6 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+#root{
+  height: 100vh;
 }
-
 .logo {
   height: 5em;
   padding: 1.5em;
@@ -31,19 +27,4 @@
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
-}
-
-.card {
-  padding: 2em;
-  text-align: center;
-  align-items: center;
-  display: flex;
-  justify-content: center;
-}
-
-.read-the-docs {
-  color: #888;
-}
-.resaltado{
- color: #fc4b08;
 }
