--- a/src/index.css
+++ b/src/index.css
@@ -9,60 +9,28 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+ height: 100vh;
+  text-align: center;
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
   background-color: #242424;
+}
+body::-webkit-scrollbar {
+  width: 12px;               /* width of the entire scrollbar */
+}
+
+body::-webkit-scrollbar-track {
+  background: #242424;        /* color of the tracking area */
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #3b3b3b;    /* color of the scroll thumb */
+  border-radius: 20px;       /* roundness of the scroll thumb */
+  border: 3px solid #242424;  /* creates padding around scroll thumb */
 }
 h1 {
   font-size: 2.6em;
   line-height: 1.1;
   margin: 0 0 30px 0;
   color: rgba(255, 255, 255, 0.87);
-}
-button {
-  border-radius: 8px;
-  border: 1px solid #fc4b08;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-  transition: filter 300ms ease-in;
-  color: white;
-}
-input{
-  border: 1px solid #fc4b08;
-  background-color: #1a1a1a;
-  border-radius: 8px;
-  font-size: 1em;
-  padding: 0.6em 1.2em;
-  font-weight: 500;
-  margin-right: 10px;
-  color: #fc4b08;
-}
-input:focus{
-  outline: none;
-}
-button:hover {
-  filter: drop-shadow(0 0 2em #ffa264aa);
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
