--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
 }
 body {
   background-color: #242424;
+  margin: 0;
 }
 body::-webkit-scrollbar {
   width: 12px;               /* width of the entire scrollbar */
