--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -19,6 +19,7 @@
 }
 .nav a{
    color: #EDEDED;
+   margin-left: 5px;
    margin-right: 30px;
    text-decoration: none;
    transition: filter 300ms ease-in;
