--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+#root{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 .logo {
   height: 5em;
   padding: 1.5em;
