--- a/src/index.css
+++ b/src/index.css
@@ -8,12 +8,17 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
- height: 100vh;
   text-align: center;
+  height: 100%;
+}
+html, body {
+  height: 100vh;
+  margin: 0;
 }
 body {
   background-color: #242424;
   margin: 0;
+  
 }
 body::-webkit-scrollbar {
   width: 12px;               /* width of the entire scrollbar */
