--- a/src/components/Comandos/Comandos.css
+++ b/src/components/Comandos/Comandos.css
@@ -1,6 +1,5 @@
   .container{
-    max-width: 980px;
-    margin: 0 auto;
+    padding: 0 100px;
   }
   .logo {
     height: 5em;
@@ -23,7 +22,7 @@
   }
   .textInput{
     height: 50px;
-    border-radius: 8px 0 0 8px;
+    border-radius: 0px 0 0 8px;
     border-right: 0;
     border-bottom: 1px solid rgba(238,123,4,1);
     border-top: 1px solid rgba(238,123,4,1);
@@ -41,7 +40,7 @@
     font-weight: bold;
   }
   .btnCopy {
-    border-radius:0 8px 8px 0;
+    border-radius:0 0px 8px 0;
     border-right: 1px solid rgba(238,123,4,1);
     border-bottom: 1px solid rgba(238,123,4,1);
     border-top: 1px solid rgba(238,123,4,1);
@@ -64,6 +63,12 @@
   }
   .nameComando{
     color:rgba(238,123,4,1);
+    margin: 0;
+    padding: 10px;
+    border-radius: 8px 8px 0 0;
+    border-top: 1px solid rgba(238,123,4,1);
+    border-right: 1px solid rgba(238,123,4,1);
+    border-left: 1px solid rgba(238,123,4,1);
   }
   .divCard{
     text-align: left;
@@ -72,8 +77,9 @@
     display: grid;
     width: 100%;
     margin: 0 auto;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-gap: 20px;
+    margin-top: 100px;
   }
   @media (max-width: 980px) {
     .grid{
