--- a/src/components/webFront/webFront.css
+++ b/src/components/webFront/webFront.css
@@ -1,4 +1,13 @@
+.main-content {
+  margin-top: 60px; /* Altura de la barra superior */
+  margin-left: 250px; /* Ancho del menú lateral */
+  padding: 20px;
+  height: 100%;
+  position: relative;
+  z-index: 1; /* Asegura que el contenido esté por debajo de la barra superior y del sidebar */
+}
 .containerWF{
+  height: 100%;
   display: flex;
   align-items: center;
   flex-direction: column;
