--- a/src/components/Comandos/Comandos.css
+++ b/src/components/Comandos/Comandos.css
@@ -1,5 +1,19 @@
+.main-content {
+  margin-top: 80px; /* Altura de la barra superior */
+  margin-left: 250px; /* Ancho del menú lateral */
+  height: 100%;
+  position: relative;
+  z-index: 1; /* Asegura que el contenido esté por debajo de la barra superior y del sidebar */
+}
   .container{
-    padding: 0 100px;
+    height: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  }
+  .container h1{
+    text-align: center;
   }
   .logo {
     height: 5em;
