--- a/src/components/Loading/Loading.module.css
+++ b/src/components/Loading/Loading.module.css
@@ -1,3 +1,11 @@
+.main{
+  margin-top: 60px; /* Altura de la barra superior */
+  margin-left: 250px; /* Ancho del menú lateral */
+  padding: 20px;
+  height: 100%;
+  position: relative;
+  z-index: 1; /* Asegura que el contenido esté por debajo de la barra superior y del sidebar */
+}
 .loading{
     display: flex;
     flex-direction: column;
