--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,7 +1,19 @@
 .nav{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #333;
+    color: white;
+    z-index: 1000; /* Asegura que la barra superior esté por encima del sidebar */
+}
+.nav ul{
+    height: 80px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 0 30px;
+    margin: 0;
 }
 .nav li{
     list-style: none;
@@ -20,7 +32,6 @@
 .nav a{
    color: #EDEDED;
    margin-left: 5px;
-   margin-right: 30px;
    text-decoration: none;
    transition: filter 300ms ease-in;
 }
