--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,6 +1,8 @@
 .footer{
+    position: relative;
     margin-top: 30px;
     bottom: 0;
+    left: calc(100% - 250px);
     padding: 20px;
 }
 .descriptionFooter{
