--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,17 +1,16 @@
 .nav{
     position: fixed;
     top: 0;
-    left: 0;
-    width: 100%;
+    left: 250px;
+    width: calc(100% - 250px);
     background-color: #333;
     color: white;
-    z-index: 1000; /* Asegura que la barra superior esté por encima del sidebar */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5); /* Sombra del navbar */
 }
 .nav ul{
     height: 80px;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    justify-content:end;
     padding: 0 30px;
     margin: 0;
 }
