--- a/src/components/LeftNav/LeftNav.module.css
+++ b/src/components/LeftNav/LeftNav.module.css
@@ -13,6 +13,7 @@
 }
 .sidebar img{
     margin-top: 9px;
+    margin-bottom: 20px;
 }
 .sidebar ul {
     list-style-type: none;
@@ -21,7 +22,7 @@
 
 .sidebar ul li {
     padding: 8px;
-    margin-top: 20px;
+    margin-bottom: 20px;
     display: flex;
     align-items: center;
 }
