--- a/src/components/LeftNav/LeftNav.module.css
+++ b/src/components/LeftNav/LeftNav.module.css
@@ -9,7 +9,7 @@
     flex-direction: column;
     justify-content: space-between;
     z-index: 1000;
-    box-shadow: 4px 0 6px rgba(0, 0, 0, 0.3); /* Sombra del sidebar */
+    border-right: 1px solid rgb(71, 71, 71);
 }
 .sidebar img{
     margin-top: 9px;
@@ -18,6 +18,7 @@
 .sidebar ul {
     list-style-type: none;
     margin: 0;
+    padding-left: 15px;
 }
 
 .sidebar ul li {
