--- a/src/components/LeftNav/LeftNav.module.css
+++ b/src/components/LeftNav/LeftNav.module.css
@@ -7,6 +7,7 @@
         background-color: #333;
         display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: space-between;
     z-index: 1000;
     border-right: 1px solid rgb(71, 71, 71);
