--- a/src/components/Comandos/Comandos.module.css
+++ b/src/components/Comandos/Comandos.module.css
@@ -1,6 +1,7 @@
-.main-content {
+.mainContent {
   margin-top: 80px; /* Altura de la barra superior */
   margin-left: 250px; /* Ancho del menú lateral */
+  padding: 20px;
   height: 100%;
   position: relative;
   z-index: 1; /* Asegura que el contenido esté por debajo de la barra superior y del sidebar */
