--- a/src/components/webFront/webFront.module.css
+++ b/src/components/webFront/webFront.module.css
@@ -1,5 +1,5 @@
-.main-content {
-  margin-top: 60px; /* Altura de la barra superior */
+.mainContent {
+  margin-top: 80px; /* Altura de la barra superior */
   margin-left: 250px; /* Ancho del menú lateral */
   padding: 20px;
   height: 100%;
@@ -49,7 +49,7 @@
     justify-content: center;
   }
   
-  .read-the-docs {
+  .readTheDocs {
     color: #888;
   }
   .resaltado{
