--- a/src/components/DigitoControl/DigitoControl.module.css
+++ b/src/components/DigitoControl/DigitoControl.module.css
@@ -1,5 +1,5 @@
-.main-content {
-  margin-top: 60px; /* Altura de la barra superior */
+.mainContent {
+  margin-top: 80px; /* Altura de la barra superior */
   margin-left: 250px; /* Ancho del menú lateral */
   padding: 20px;
   height: 100%;
