--- a/src/components/Comandos/Comandos.module.css
+++ b/src/components/Comandos/Comandos.module.css
@@ -12,6 +12,7 @@
   align-items: center;
   flex-direction: column;
   justify-content: center;
+  margin-top: 50px;
   }
   .container h1{
     text-align: center;
@@ -22,6 +23,7 @@
     will-change: filter;
     transition: filter 300ms;
   }
+  
   .logo:hover {
     filter: drop-shadow(0 0 2em #646cffaa);
   }
@@ -94,7 +96,6 @@
     margin: 0 auto;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 20px;
-    margin-top: 100px;
   }
   @media (max-width: 980px) {
     .grid{
@@ -104,3 +105,10 @@
   .resaltado{
     color: rgba(238,123,4,1);
    }
+   .h3SubTitle{
+    color:rgba(238,123,4,1);
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    margin-bottom: 50px;
+  }
