--- a/src/components/Comandos/Comandos.module.css
+++ b/src/components/Comandos/Comandos.module.css
@@ -13,6 +13,7 @@
   flex-direction: column;
   justify-content: center;
   margin-top: 50px;
+  margin-bottom: 100px;
   }
   .container h1{
     text-align: center;
