--- a/src/components/Comandos/Comandos.module.css
+++ b/src/components/Comandos/Comandos.module.css
@@ -2,12 +2,11 @@
   margin-top: 80px; /* Altura de la barra superior */
   margin-left: 250px; /* Ancho del menú lateral */
   padding: 20px;
-  height: 100%;
+  height: 100vh;
   position: relative;
   z-index: 1; /* Asegura que el contenido esté por debajo de la barra superior y del sidebar */
 }
   .container{
-    height: 100%;
   display: flex;
   align-items: center;
   flex-direction: column;
