+ CommandCategory Component + Command Component Fix: Se factoriza Codigo del componente Comandos

--- a/src/components/Comandos/Comandos.module.css
+++ b/src/components/Comandos/Comandos.module.css
@@ -118,5 +118,5 @@
     border-radius: 8px 8px 0 0;
     border-left: 1px solid rgba(238,123,4,1);
     margin-bottom: 0;
-    background: -webkit-linear-gradient(45deg, #ee7b04,#242424,#242424);/* Chrome 10-25, Safari 5.1-6 */                          background: linear-gradient(45deg, #ee7b04,#242424,#242424);/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */                                             
+    background: -webkit-linear-gradient(45deg, #ee7b04,#7a4207,#242424);/* Chrome 10-25, Safari 5.1-6 */                          background: linear-gradient(45deg, #ee7b04,#7a4207,#242424);/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */                                             
   }
