--- a/src/components/Comandos/Comandos.module.css
+++ b/src/components/Comandos/Comandos.module.css
@@ -120,3 +120,11 @@
     margin-bottom: 0;
     background: -webkit-linear-gradient(45deg, #ee7b04,#7a4207,#242424);/* Chrome 10-25, Safari 5.1-6 */                          background: linear-gradient(45deg, #ee7b04,#7a4207,#242424);/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */                                             
   }
+
+  .helpButton {
+    display:block;
+    float:right;
+    margin-right:5px;
+    margin-top:-5px;
+    height: 100%;
+  }
